--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/header-menu.css">
   <link rel="stylesheet" href="">
-  <link rel="stylesheet" href="/css/footer.css">
+  <link rel="stylesheet" href="css/footer.css">
   <title>Meu portifólio</title>
 </head>
 
