--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <li><a href="https://www.figma.com/@Nathan_Ventura" target="_blank">Figma</a></li>
     </ul>
   </footer>
-  <script src="/js/script-btn.js"></script>
+  <script src="js/script-btn.js"></script>
 </body>
 
 </html>
